# hamsktop

./: .gitignore  README.md  SPIKE-RESULT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
.omc/plans/: MILESTONES-KR.md  hamsktop-v0.1-consensus.md  open-questions.md
.omc/specs/: deep-interview-hamsktop-pixel-hamster.md
scripts/: gen-placeholders.ts  gen-source-icon.ts  generate-alpha-mask.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-spike/: .gitignore  index.html  package-lock.json  package.json
src-tauri-spike/src/: App.tsx  styles.css
src-tauri-spike/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-spike/src-tauri/capabilities/: default.json
src-tauri-spike/src-tauri/src/: lib.rs  main.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/hit_test/: alpha_mask.rs  mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/idle/: mod.rs
src-tauri/src/lifecycle/: mod.rs
src-tauri/src/persistence/: mod.rs
src/animation/: manifest.json  spriteEngine.ts
src/assets/alpha_masks/: adult_mask.json  baby_mask.json  senior_mask.json
src/components/: ActionMenu.tsx  HamsterSprite.tsx  StatsGauges.tsx
src/hooks/: useHitTest.ts
src/i18n/: ko.json
src/store/: useHamsterStore.ts
src/styles/: global.css
