[package]
name = "hamsktop"
version = "0.1.0"
description = "Hamsktop — transparent always-on-top pixel hamster desktop companion"
authors = ["hamsktop"]
edition = "2021"

[lib]
name = "hamsktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
mouse_position = "0.1"
tokio = { version = "1", features = ["time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
