[package]
name = "hamsktop-spike"
version = "0.0.1"
description = "Tauri v2 API validation spike for Hamsktop"
authors = ["hamsktop"]
edition = "2021"

[lib]
name = "hamsktop_spike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mouse_position = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
